force-app/main/default/objects/Alerta__c/fields/Control__c.field-meta.xml
<CustomField>
    <fullName>Control__c</fullName>
    <label>Control</label>
    <length>255</length>
    <type>Text</type>
</CustomField>