force-app/main/default/objects/Alerta__c/fields/Fecha_de_generacion_de_Alerta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_generacion_de_Alerta__c</fullName>
    <label>Fecha de generación de Alerta</label>
    <type>Date</type>
</CustomField>