force-app/main/default/objects/Alerta__c/fields/Fecha_resolucion_de_Alerta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_resolucion_de_Alerta__c</fullName>
    <label>Fecha resolución de Alerta</label>
    <type>Date</type>
</CustomField>