force-app/main/default/objects/Alerta__c/fields/Funcion__c.field-meta.xml
<CustomField>
    <fullName>Funcion__c</fullName>
    <label>Función</label>
    <length>255</length>
    <type>Text</type>
</CustomField>