force-app/main/default/objects/Alerta__c/fields/idalerta__c.field-meta.xml
<CustomField>
    <fullName>idalerta__c</fullName>
    <externalId>true</externalId>
    <label>idalerta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>