force-app/main/default/objects/Alerta__c/fields/Lectura_de_alerta_auditor__c.field-meta.xml
<CustomField>
    <fullName>Lectura_de_alerta_auditor__c</fullName>
    <label>Lectura de alerta auditor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>