force-app/main/default/objects/Alerta__c/fields/Mensaje_de_Alerta__c.field-meta.xml
<CustomField>
    <fullName>Mensaje_de_Alerta__c</fullName>
    <label>Mensaje de Alerta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>