force-app/main/default/objects/Alerta__c/fields/Motivo_de_rechazo__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_rechazo__c</fullName>
    <label>Motivo de rechazo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>