force-app/main/default/objects/Alerta__c/fields/Nivel_de_auditoria__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_auditoria__c</fullName>
    <label>Nivel de auditoria</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>