force-app/main/default/objects/Alerta__c/fields/Prestacion__c.field-meta.xml
<CustomField>
    <fullName>Prestacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestación</label>
    <referenceTo>Prestacion__c</referenceTo>
    <relationshipLabel>Alertas</relationshipLabel>
    <relationshipName>Alertas</relationshipName>
    <type>Lookup</type>
</CustomField>