force-app/main/default/objects/Alerta__c/fields/Prestacion_de_reintegro__c.field-meta.xml
<CustomField>
    <fullName>Prestacion_de_reintegro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestación de reintegro</label>
    <referenceTo>Prestacion_de_reintegro__c</referenceTo>
    <relationshipLabel>Alertas</relationshipLabel>
    <relationshipName>Alertas</relationshipName>
    <type>Lookup</type>
</CustomField>