force-app/main/default/objects/Alerta__c/fields/Resolucion_de_alerta_auditor__c.field-meta.xml
<CustomField>
    <fullName>Resolucion_de_alerta_auditor__c</fullName>
    <label>Resolución de alerta auditor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>