force-app/main/default/objects/Alerta__c/fields/Texto_aclarativo__c.field-meta.xml
<CustomField>
    <fullName>Texto_aclarativo__c</fullName>
    <label>Texto aclarativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>