force-app/main/default/objects/Alerta__c/listViews/Alertas_AM.listView-meta.xml
<ListView>
    <fullName>Alertas_AM</fullName>
    <columns>NAME</columns>
    <columns>Funcion__c</columns>
    <columns>Estado__c</columns>
    <columns>Prestacion__c</columns>
    <columns>Evento_Medico__c</columns>
    <columns>Resolucion_de_alerta_auditor__c</columns>
    <columns>Nivel_de_auditoria__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Funcion__c</field>
        <operation>equals</operation>
        <value>AM</value>
    </filters>
    <label>Alertas AM</label>
</ListView>