force-app/main/default/objects/Alerta__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Funcion__c</columns>
    <columns>Evento_Medico__c</columns>
    <columns>Estado__c</columns>
    <columns>Fecha_resolucion_de_Alerta__c</columns>
    <columns>Motivo_de_rechazo__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Prestacion__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Funcion__c</field>
        <operation>equals</operation>
        <value>AM</value>
    </filters>
    <label>Todos</label>
</ListView>